Fix rendering of bottom border lines in selection panel on mobile

--- a/src/containers/adminPage/styles.scss
+++ b/src/containers/adminPage/styles.scss
@@ -700,6 +700,11 @@
         margin-left: 32px;
     }
 
+    .selection-data-wrapper--border {
+        margin-left: -52px;
+        width: 340px;
+    }
+
     .checkbox-container {
         width: 15%;
     }
